# hails

./: .gitignore  Hails.hs  LICENSE  README.md  hails.cabal  hails.hs
Hails/: App.hs  Copy.hs  Crypto.hs  Database.hs  HttpClient.hs  HttpServer.hs  Policy.hs  PolicyModule.hs  Version.hs  Web.hs
Hails/Data/: Hson.hs  LBson.hs  Lson.hs
Hails/Data/Hson/: TCB.hs
Hails/Data/LBson/: Rexports.hs  Safe.hs  TCB.hs
Hails/Data/LBson/Rexports/: Bson.hs
Hails/Database/: Access.hs  Core.hs  MongoDB.hs  Query.hs  Structured.hs  TCB.hs
Hails/Database/Access/: TCB.hs
Hails/Database/MongoDB/: Structured.hs  TCB.hs  Unsafe.hs
Hails/Database/MongoDB/TCB/: Access.hs  Convert.hs  DCAccess.hs  Query.hs  Types.hs
Hails/Database/Query/: TCB.hs
Hails/HttpServer/: Auth.hs  Types.hs
Hails/IterIO/: Conversions.hs  HailsRoute.hs  Http.hs  HttpClient.hs  Mime.hs
Hails/Network/: HTTP.hs  Http.hs
Hails/PolicyModule/: DSL.hs  Groups.hs  TCB.hs
Hails/TCB/: Load.hs  Types.hs
Hails/Utils/: TCB.hs
Hails/Web/: Controller.hs  Frank.hs  REST.hs  Responses.hs  Router.hs  User.hs
LIO/Data/: Time.hs
examples/: SimpleApp.hs  SimpleFrank.hs  SimpleParams.hs  SimpleREST.hs  httpClientExample.hs  httplib.hs  simpleDBExample.hs
examples/SimpleFullExample/: SimpleApp.hs  SimpleApp2.hs  SimplePolicyModule.hs  database.conf
examples/SimpleFullExample/static/: fetch.html  store.html
examples/SimpleStatic/: SimpleApp.hs
examples/SimpleStatic/static/css/: lightbox.css  screen.css
examples/SimpleStatic/static/js/: lightbox.js
examples/SimpleWithClient/: SimpleApp.hs
examples/hails-rock/: HailsRock.hs  database.conf
examples/hails-rock/HailsRock/: MP.hs  Views.hs
examples/hails-rock/static/js/: application.js
tests/: AuthTests.hs  DatabaseTests.hs  HsonTests.hs  HttpServerTests.hs  Tests.hs
tests/Hails/Data/Hson/: Instances.hs
