Name:           hails
Version:        0.9.0.0
build-type:     Simple
License:        GPL-2
License-File:   LICENSE
Author:         Hails team
Maintainer:     Hails team <hails at scs dot stanford dot edu>
Synopsis:       Multi-app web platform framework
Category:       Web
Cabal-Version:  >= 1.8

Description:
  The rise of web platforms and their associated /apps/ represents a
  new way of developing and deploying software.  Sites such as
  Facebook and Yammer are no longer written by a single entity, but
  rather are freely extended by third-party developers offering
  competing features to users.

  .

  Allowing an app to access more user data allows developers to build
  more compelling products. It also opens the door to accidental or
  malicious breaches of user privacy. In the case of a website like
  Facebook, exposing access to a user's private messages would allow
  an external developer to build a search feature. Exciting!  But,
  another developer can take advantage of this feature to build an app
  that mines private messages for credit card numbers, ad keywords, or
  other sensitive data.

  .

  Frameworks such as Ruby on Rails, Django, Yesod, etc. are geared
  towards building monolithic web sites. And, they are great for
  this! However, they are not designed for websites that integrate
  third-party code, and thus lack a good mechanism for building such
  multi-app platforms without sacrificing a user's security or an
  app's functionality.

  .

  Hails is explicitly designed for building web /platforms/, where it
  is expected that a site will comprise many mutually-distrustful
  components written by a variety of entities.  We built Hails around
  two core design principles. 

  .

  * Separation of policy:
    Data access policies should be concisely specified alongside data
    structures and schemas, rather than strewn throughout the
    codebase in a series of conditionals. Code that implements this
    is called a /policy module/ in Hails (see "Hails.PolicyModule").

  .


  * Mandatory access control (MAC):
    Data access policies should be mandatory even once code has
    obtained access to data.  MAC lets platform components modules
    productively interact by sharing data, despite mutual distrust.
    Haskell lets us implement MAC at a fine grained level using the
    information flow control library "LIO".

  .

  A Hails platform hosts two types of code: /apps/ and /policy
  modules/. Apps encompass what would traditionally be considered
  controller and view logic. Policy modules are libraries that
  implement both the model and the data security policy. They are
  invoked directly by apps or other policy modules, but run with
  different privileges from the invoking code. Both apps and policy
  modules can be implemented by untrusted third parties, with the user
  only needing to trust the policy module governing the data in
  question. Separating of policy code from app code allows users to
  inspect and more easily unserstand the overall security provided by
  the system, while MAC guarantees that these policies are enforced
  in an end-to-end fashion.

Source-repository head
  Type:     git
  Location: http://www.gitstar.com/scs/hails.git

Library
  Build-Depends: authenticate ==1.3.0.*,
                 base >= 4.5 && < 5,
                 base64-bytestring >= 0.1 && < 0.2,
                 blaze-builder ==0.3.1.0,
                 binary >= 0.5 && < 0.6,
                 bson >= 0.2 && < 0.3,
                 bytestring >= 0.9 && < 1,
                 case-insensitive ==0.4.0.1,
                 cereal >= 0.3.5.1 && < 0.4,
                 compact-string-fix >= 0.3.2 && < 0.4,
                 conduit ==0.5.*,
                 containers >= 0.4.2 && < 0.5,
                 cookie ==0.4.0,
                 HsOpenSSL >= 0.10 && < 2,
                 http-conduit ==1.5.0.3,
                 http-types ==0.7.*,
                 iterIO >= 0.2.2 && < 0.3,
                 lio >= 0.9.0.0 && < 1.0,
                 MissingH >= 1.1.1 && < 2,
                 mongoDB >= 1.3.0 && < 1.4,
                 mtl >= 2.0 && < 2.1,
                 network >= 2.3 && < 2.4,
                 parsec >= 3.1.2 && < 3.2,
                 pureMD5 >= 2.1.0.3 && < 3,
                 SHA >= 1.5 && < 2,
                 SimpleAES >= 0.4.2 && < 0.5,
                 resourcet ==0.3.3.1,
                 RSA >= 1.0.6.2 && < 2,
                 text == 0.11.*,
                 time >= 1.4 && < 2.0,
                 transformers >= 0.2.2.0 && < 0.3,
                 unix >= 2.5 && < 3,
                 wai ==1.3.*,
                 warp

  ghc-options: -Wall -fno-warn-orphans

  Exposed-modules:
    Hails
    Hails.Data.Hson
    Hails.Data.Hson.TCB
    Hails.Database
    Hails.Database.Core
    Hails.Database.TCB
    Hails.Database.Query
    Hails.Database.Query.TCB
    Hails.HttpServer
    Hails.HttpServer.Auth
    Hails.HttpServer.Types
    Hails.PolicyModule
    Hails.PolicyModule.TCB

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs

  ghc-options: -threaded -rtsopts -Wall -fno-warn-orphans

  build-depends:
    QuickCheck,
    HUnit,
    quickcheck-instances,
    quickcheck-lio-instances,
    test-framework,
    test-framework-quickcheck2,
    test-framework-hunit,
    base,
    lio,
    conduit ==0.5.*,
    http-types,
    HUnit,
    wai,
    wai-test,
    containers,
    bytestring,
    bson,
    mongoDB,
    binary,
    cereal,
    text,
    transformers,
    time,
    unix,
    hails

